# RCSB_DB HISTORY

11-Mar-2018  - Py2->Py3 and refactored for python packaging tools
 4-Jul-2018  - V0.12 reformulate schema definitions directly from dictionary
               metadata and targeted helper functions.
20-Jul-2018    V0.13 overhaul static schema management
28-Jul-2018    V0.14 corrections for selection and type filters and object size pruning
20-Aug-2018.   V0.15 added sliced collections (e.g. entity or cannonical identifier),
               JSON schema description of collections, sfx/xfel examples, dictionary
               methods implemented in helper classes, and incremental repository metadata
               updates.
25-Aug-2018    V0.16 split out rcsb.utils.config, rcsb.utils.io, rcsb.utils.multiproc and
               mock-data as a shared submodule for test data. Merged branch ' namespace'
               back into master.


